End Ready to host

--- a/views/dev.ejs
+++ b/views/dev.ejs
@@ -6,39 +6,57 @@
 </head>
 
 <body>
-    <h1>Devlopers</h1>
-    <div class="row">
-        <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 con-1 content">
-            <h2>Bharat Kumar Khatri</h2>
-           <p> Currently Studying at KNIT Sultanpur. <br> Some experience in Web devlopment , App devlopment . <br> Also have knowledge in C++ ,Python and Java </p>
+    <h1>Developers</h1>
+    <div class="outer">
+        <div class="row">
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 image">
+                <img src="/images/mai hu chutiya.jpg" alt="">
+            </div>
+            <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 content">
+                <h2>Bhaarat Kumar Khatri</h2>
+                <br>
+                <p> Currently Studying at KNIT Sultanpur. <br> Some experience in Web devlopment , App devlopment . <br>
+                    Also have knowledge in C++ ,Python and Java
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <i onclick="location.href='https://www.instagram.com/bharat_kumar_khatri/'" class="fab fa-instagram fa-2x ic"></i>
+                    <i onclick="location.href='https://www.facebook.com/bharat.khatri.39142/'"
+                        class="fab fa-facebook fa-2x ic"></i>
+                    <i onclick="location.href='https://www.linkedin.com/in/bhaarat-kumar-khatri-76354118b/'"
+                        class="fab fa-linkedin-in fa-2x ic"></i>
+                    <a href="mailto:bharatkhatri351@gmail.com"><i class="fas fa-envelope fa-2x ic"></i></a>
+                </p>
+
+            </div>
         </div>
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 image">
-            <img src="/images/mai hu chutiya.jpg" alt="">
+        <div class="row">
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 image kush">
+                <img height="20vh" src="/images/don.jpg" alt="">
+            </div>
+            <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 content">
+                <h2>Kaustubh Rai</h2>
+                <p> Currently Studying at KNIT Sultanpur Information Technology Branch. <br> Some experience in Web
+                    devlopment , App devlopment ,Game devlopment. <br> Also have knowledge in C++ and Python.
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <i onclick="location.href='https://www.instagram.com/fox_14_2001/'" class="fab fa-instagram fa-2x ic"></i>
+                    <i onclick="location.href='https://www.facebook.com/kaustubh.rai.148/'" class="fab fa-facebook fa-2x ic"></i>
+                    <a href="mailto:rkush214@gmail.com"><i class="fas fa-envelope fa-2x ic"></i></a>
+                </p>
+            </div>
+
+
         </div>
-        <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 con-2 content">
-            <h2>Bharat Kumar Khatri</h2>
-           <p> Currently Studying at KNIT Sultanpur. <br> Some experience in Web devlopment , App devlopment . <br> Also have knowledge in C++ ,Python and Java </p>
-        </div>
-    </div>
-    <div class="row">
-        
-        <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 con-1 content">
-            <h2>Kaustubh Rai</h2>
-           <p>  Currently Studying at KNIT Sultanpur Information Technology Branch. <br> Some experience in Web devlopment , App devlopment ,Game devlopment. <br> Also have knowledge in C++ and Python.  </p>
-        </div>
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 image kush">
-            <img height="20vh" src="/images/don.jpg" alt="">
-        </div>
-        <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 con-2 content">
-            <h2>Kaustubh Rai</h2>
-           <p>  Currently Studying at KNIT Sultanpur Information Technology Branch. <br> Some experience in Web devlopment , App devlopment ,Game devlopment. <br> Also have knowledge in C++ and Python.</p>
-        </div>
-   
-       
     </div>
 
 </body>
 
 </html>
-
-
