--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,8 +33,7 @@
                     <div class="col-12 cntct">
                         <i onclick="location.href='/'" class="fab fa-instagram fa-2x ic"></i>
                         <i onclick="location.href='https://www.facebook.com/groups/33311002137'" class="fab fa-facebook fa-2x ic"></i>
-                        <i onclick="location.href='https://www.linkedin.com/in/bhaarat-kumar-khatri-76354118b/'" class="fab fa-linkedin-in fa-2x ic"></i>
-                        <i onclick="location.href='www.google.com'" class="fas fa-envelope fa-2x ic"></i>
+                        <a href="mailto:webstartup1014@gmail.com"><i class="fas fa-envelope fa-2x ic"></i></a>    
                     </div>
                     <div class="col-12 cntct">
                         © WebStartup 2020-2021
