--- a/public/dev.css
+++ b/public/dev.css
@@ -1,63 +1,94 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-.row{
-    margin: 2% 1%;
-    padding: 5% 10%;
-    margin-right: 0% !important;
-    margin-left: 0% !important;
-    align-items: center;
+.row {
+
+    padding: 5% 6%;
+    margin: 3% 10% !important;
+    width: 80%;
+    align-items: normal;
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
 }
 
-.image{
+
+.image {
     height: 75%;
 }
 
-img{
+img {
     width: 100%;
-    height: 80%;   
+    height: 80%;
     /* margin: 0 10%; */
 }
 
-.content{
-    text-align: left;  
+.content {
+    text-align: left;
 }
 
-.kush{
+.kush {
     text-align: right;
 }
 
-p{  
+p {
     height: 100%;
     margin: 2% 2%;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: large;
 }
-h2{
+
+h2 {
     margin: 0 2%;
+    font-family:'Courier New', Courier, monospace;
+    font-weight: 600;
+    font-size:2.5rem;
 }
-h1{
+
+h1 {
     margin: 5%;
     text-align: center;
+    font-family:'Courier New', Courier, monospace;
+    font-weight: 800;
+    font-size: 4rem;
 }
-.con-1{
+
+.con-1 {
     display: none;
 }
 
-.outer-1{
+.outer-1 {
     height: 100vh;
 }
 
-@media (max-width : 764px){
-    .con-1{
+@media (max-width : 764px) {
+    .con-1 {
         display: block;
     }
-    .con-2{
+
+    .con-2 {
         display: none;
     }
 
-    .content{
-        margin-top: 10%; 
+    .content {
+        margin-top: 10%;
     }
+}
+
+i{
+    cursor: pointer;
+}
+.ic {
+    padding: 2% 2%;
+}
+
+a{
+    color: #212529;
+}
+
+a:hover
+{
+    color: #212529;   
 }
