--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
     <div class="action" onclick="actionToggle();">
         <span>+</span>
         <ul>
-            <li onclick="location.href='/form'">Feed Back Form &nbsp;<i class="fas fa-users"></i></li>
+            <li onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSc9cSBSnxUaCplpm0I95oP-nk8Q9PxHmzGFiG3KpsrF1iCquA/viewform?usp=sf_link'">Feed Back Form &nbsp;<i class="fas fa-users"></i></li>
             <li onclick="location.href='/dev'">Devlopers&nbsp;<i class="fas fa-sticky-note"></i></li>
         </ul>
     </div>
