--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,14 @@
 </head>
 
 <body>
+
+    <div class="preloader">
+        <img src="../images/preloader.gif" alt="preloader">
+        <div class="text">
+             &nbsp; Loading...
+        </div>
+        </div>
+
     <section class="upper">
         <div class="row">
             <div class="show1 col-xl-6 col-lg-6 col-md-12 col-sm-12">
