--- a/public/span.css
+++ b/public/span.css
@@ -20,14 +20,14 @@
     align-items: center;
     color: white;
     font-size: 2rem;
-    transform: translate(0%, -8%);
+    /* transform: translate(0%, -8%); */
 }
 
 .action.active span {
 
     transform: rotate(135deg);
-    left: 3px;
-    bottom: -2px;
+    /* left: 3px; */
+    /* bottom: -2px; */
 }
 
 .action ul {
