--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,11 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     overflow-x: none;
 }
 
-.row{
+.row {
     height: 100%;
     margin: 2% 1%;
     padding: 2% 2%;
@@ -14,59 +14,60 @@
     align-items: center;
 }
 
-.show1{
+.show1 {
     height: inherit;
     text-align: center;
 }
 
-.show1 .row{
+.show1 .row {
     padding: 2% 2%;
     margin: 0%;
     text-align: right;
 }
 
-h1{
-    font-family:'Courier New', Courier, monospace;
+h1 {
+    font-family: 'Courier New', Courier, monospace;
     font-size: 4rem !important;
     letter-spacing: 2px;
 }
 
 
 /* Upper */
-.upper{
+.upper {
     background-color: white;
     width: 100%;
     height: 60%;
 }
 
-.text, .link{
+.text,
+.link {
     margin: 4% 0%;
-} 
+}
 
 
 
-.image{
+.image {
     height: 100%;
     padding: 3%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
-.btn{
+.btn {
     width: 20%;
 }
 
-.show2 .fas{
+.show2 .fas {
     transform: translate(-50%);
     margin: 0% 5%;
-    
+
 }
 
-i{
+i {
     cursor: pointer;
 }
 
-#lower{
+#lower {
     height: 40%;
 }
 
@@ -78,61 +79,133 @@ i{
     padding: 2% 2%;
 }
 
-
-
-@media(max-width: 991px){
-    .show1 .row{
-        text-align: center;
-    }
-    .btn{
+@media(max-width:1183) {
+    .btn {
         width: 30%;
     }
-    .image{
+}
+
+@media(max-width: 991px) {
+    .show1 .row {
+        text-align: center;
+    }
+
+    .btn {
+        width: 50%;
+    }
+
+    .image {
         width: 90%;
     }
 }
 
 @media(max-width: 700px) {
-    .show1 .row{
+    .show1 .row {
         text-align: center;
     }
-    .btn{
-        width: 30%;
+
+    .btn {
+        width: 50%;
     }
-    .image{
+
+    .image {
         width: 90%;
     }
+
+    h1 {
+        font-size: 2.8rem !important;
+    }
+
+    .fa-instagram:before,
+    .fa-facebook:before,
+    .fa-linkedin-in:before,
+    .fa-envelope:before {
+        font-size: 25px;
+    }
+
+    .text {
+        font-size: 1.5rem;
+    }
 }
+
+@media(max-width: 250px) {
+    h1 {
+        font-size: 2rem !important;
+    }
+
+    .btn {
+        width: 100%;
+    }
+
+    .fa-instagram:before,
+    .fa-facebook:before,
+    .fa-linkedin-in:before,
+    .fa-envelope:before {
+        font-size: 25px;
+    }
+
+    .text {
+        font-size: 1.5rem;
+
+    }
+}
+
+
 
 @keyframes animate {
-    0%{
-        transform : rotate(0deg);
+    0% {
+        transform: rotate(0deg);
         transform-origin: bottom right;
     }
-    25%{
-        transform : rotate(-90deg);
+
+    25% {
+        transform: rotate(-90deg);
         transform-origin: bottom right;
     }
-    50%{
-        transform : rotate(0deg);
+
+    50% {
+        transform: rotate(0deg);
         transform-origin: bottom right;
     }
-    75%{
-        transform : rotate(90deg);
+
+    75% {
+        transform: rotate(90deg);
         transform-origin: bottom right;
     }
-    100%{
-        transform : rotate(0deg);
+
+    100% {
+        transform: rotate(0deg);
         transform-origin: bottom right;
     }
 }
 
-a{
+a {
     color: #212529;
 }
 
-a:hover
-{
-    color: #212529;   
+a:hover {
+    color: #212529;
 }
 
+.preloader {
+    top:0%;
+    background-color: white;
+    width: 100%;
+    z-index: 1001;
+    position: fixed;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    transition: opacity 0.5 ease;
+}
+
+.preloader img {
+    height: 18rem;
+}
+
+.text {
+    font-size: 2.5rem;
+    font-family: 'Courier New', Courier, monospace;
+}
