--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-
+<!-- preloader -->
     <div class="preloader">
         <img src="../images/preloader.gif" alt="preloader">
         <div class="text">
@@ -18,7 +18,7 @@
     <section class="upper">
         <div class="row">
             <div class="show1 col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                <video class="image" src="../images/Presentation1.mp4" width="100%" height="100%" loop autoplay muted></video>
+                <img class="image" src="../images/boy-studying-with-book_113065-238.jpg" width="100%" height="100%">
             </div>
             <div class="show1 col-xl-6 col-lg-6 col-md-12 col-sm-12">
                 <div class="row">
