--- a/views/dev.ejs
+++ b/views/dev.ejs
@@ -10,7 +10,7 @@
     <div class="outer">
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 image">
-                <img src="/images/mai hu chutiya.jpg" alt="">
+                <img src="/images/bhaaratdeveloper.jpg" alt="">
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 content">
                 <h2>Bhaarat Kumar Khatri</h2>
