--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
     <!-- Css -->
     <link rel="stylesheet" href="../styles.css">
-
+    <link rel="stylesheet" href="../public/pageviews.js">
     <title>Study</title>
 </head>
 
