--- a/public/styles.css
+++ b/public/styles.css
@@ -52,6 +52,7 @@ h1 {
     justify-content: space-around;
     width: 100%;
     flex-direction: column;
+    
 }
 
 .data{
@@ -62,7 +63,7 @@ h1 {
 
 .heading{
     display: flex;
-    background-color: #dc3545;
+    background-color: #427780;
     height: 8vh;
     align-items: center;
 }
@@ -70,7 +71,7 @@ h1 {
 h5{ 
     width: 100%;
     text-align: center;
-    background-color: #dc3545;
+    background-color: #427780;
     color: white;
 }
 
@@ -81,9 +82,12 @@ h5{
     padding: 2% 2%;
     border-radius: 1%;  
     margin-bottom: 3%;
+    border: #427780 solid;
 }
 
+
 li{ 
+    margin-top: 3%;
     color: black;
     margin-left: 3%;
     text-align: left;
