--- a/views/newdata.ejs
+++ b/views/newdata.ejs
@@ -9,7 +9,7 @@
 <body>
     
 
-<form action="/compose" method="POST">
+<form action="/compose1" method="POST">
     <textarea name="composeText" id="text" cols="30" rows="10"></textarea>
     <button type="submit">Submit</button>
 </form>
