Added Readme File and some validations

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,15 +31,18 @@
                             </div>
                             <div class="data" id="ecran">
                                 <ul>
-                                    <% var x = resl2[resl2.length-1].value;%>
-                                    <% for(var i=resl.length-1 ; i>=0 ; i-- ) { %>
+                                    <% if(resl2) { %>
+                                    <%      var x = resl2[resl2.length-1].value;%>
+                                    <% } %>   
+                                    <% if(resl) { %>
+                                    <%  for(var i=resl.length-1 ; i>=0 ; i-- ) { %>
                                     <%      if(x>0) { %>
-                                               <li><%= resl[i].text %> <img class="giphy" src="../images/new.gif"
-                                            alt="new"></li>
-                                        <%  console.log(x); } else { %>
+                                               <li><%= resl[i].text %> <img class="giphy" src="../images/new.gif" alt="new"></li>
+                                            <% } else { %>
                                             <li><%= resl[i].text %></li>
-                                        <% }  %>                                      
-                                    <% x--; } %>
+                                            <% } %>                                      
+                                        <% x--; } %>
+                                    <% } %>
                                 </ul>
                             </div>
                         </div>
